--- a/users/templates/password_reset_complete.html
+++ b/users/templates/password_reset_complete.html
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "user_base.html" %}
+{% load static %}
 
-</body>
-</html>
+{% block content %}
+<div class="container" style="margin-top: 100px;">
+  <div class="row justify-content-center">
+    <div class="col-md-8 text-center">
+      <h2 class="mb-4">Hasło zmienione</h2>
+      <p>Twoje hasło zostało pomyślnie zmienione.</p>
+      <a href="{% url 'login' %}" class="btn btn-dark mt-3">Zaloguj się</a>
+    </div>
+  </div>
+</div>
+{% endblock %}
