--- a/users/templates/password_reset_confirm.html
+++ b/users/templates/password_reset_confirm.html
@@ -1,10 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends "user_base.html" %}
+{% load static %}
 
-</body>
-</html>
+{% block content %}
+<div class="container" style="margin-top: 100px;">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <form method="post">
+        {% csrf_token %}
+        <h2 class="mb-4">Ustaw nowe hasło</h2>
+
+        {% if form.errors %}
+          <div class="alert alert-danger">
+            Wystąpił błąd. Sprawdź poprawność nowego hasła.
+          </div>
+        {% endif %}
+
+        <div class="form-group row mb-4">
+          <label class="col-sm-3 col-form-label">Nowe hasło</label>
+          <div class="col-sm-9">
+            <input type="password" name="new_password1" class="form-control" required>
+          </div>
+        </div>
+
+        <div class="form-group row mb-4">
+          <label class="col-sm-3 col-form-label">Potwierdź hasło</label>
+          <div class="col-sm-9">
+            <input type="password" name="new_password2" class="form-control" required>
+          </div>
+        </div>
+
+        <div class="form-group row">
+          <div class="col-sm-9 offset-sm-3">
+            <button type="submit" class="btn btn-dark">Zapisz nowe hasło</button>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+{% endblock %}
