before Project model limit_choice_to changes

--- a/users/templates/user_profile.html
+++ b/users/templates/user_profile.html
@@ -35,7 +35,8 @@
             {% endif %}
           </dl>
           
-          <div class="d-flex justify-content-end">
+          <div class="d-flex justify-content-between mt-4">
+            <a href="javascript:history.back()" class="btn btn-outline-secondary">Powrót</a>
             <a href="{% url 'logout' %}" class="btn btn-outline-danger">Wyloguj</a>
           </div>
         </div>
