--- a/projects/templates/sample_list.html
+++ b/projects/templates/sample_list.html
@@ -14,7 +14,7 @@
       <thead>
         <tr>
           <th>Nazwa</th>
-          <th>Materiał</th>
+          <th>Grupa materiałowa</th>
           <th>Data pobrania</th>
           <th class="text-end">Akcje</th>
         </tr>
