--- a/projects/templates/project_detail.html
+++ b/projects/templates/project_detail.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="card shadow">
   <div class="card-header d-flex justify-content-between align-items-center">
-    <h4>{{ project.name }}</h4>
+    <h4>Projekt: {{ project.name }}</h4>
     {% if request.user.groups.all.0.name == 'Lab_member' or request.user.is_superuser %}
       <div>
         <a href="{% url 'project_update' project.pk %}" class="btn btn-sm btn-outline-secondary">Edytuj</a>
@@ -16,11 +16,17 @@
   <div class="card-body">
     <div class="row">
       <div class="col-md-6">
-        <h5>Podstawowe informacje</h5>
+        <h5 class="mb-3">Informacje podstawowe: </h5>
         <dl class="row">
           <dt class="col-sm-4">Klient:</dt>
           <dd class="col-sm-8">{{ project.client.company_name }}</dd>
-          
+          <dt class="col-sm-4">Adres:</dt>
+          <dd class="col-sm-8">{{ project.client.company_address }}</dd>
+          <dt class="col-sm-4">Adres email:</dt>
+          <dd class="col-sm-8">{{ project.client.email }}</dd>
+          <dt class="col-sm-4">NIP:</dt>
+          <dd class="col-sm-8">{{ project.client.tax_id }}</dd>
+
           <dt class="col-sm-4">Status:</dt>
           <dd class="col-sm-8">
             <span class="badge bg-{% if project.status == 'closed' %}success{% else %}primary{% endif %}">
@@ -30,11 +36,15 @@
           
           <dt class="col-sm-4">Data zakończenia:</dt>
           <dd class="col-sm-8">{{ project.end_date|default:"-" }}</dd>
+          <dt class="col-sm-4">Odpowiedzialny za projekt:</dt>
+          <dd class="col-sm-8">
+              <a href="mailto:{{ project.assign_to }}" class="text-muted text-decoration-none">{{ project.assign_to }}</a>
+          </dd>
         </dl>
       </div>
       
       <div class="col-md-6">
-        <h5>Przypisane sprawozdania</h5>
+        <h5 class="mb-3">Przypisane sprawozdania</h5>
         <ul class="list-group">
           {% for report in project.report_set.all %}
             <li class="list-group-item">
