--- a/projects/templates/project_list.html
+++ b/projects/templates/project_list.html
@@ -24,7 +24,7 @@
       </thead>
       <tbody>
         {% for project in projects %}
-        <tr class="{% if project.status == 'awaiting approval' %}table-warning{% endif %}">
+        <tr class="{% if project.status == 'awaiting approval' %}table-light{% endif %}">
           <td>{{ project.name }}</td>
 
           {% if request.user.groups.all.0.name == 'Lab_member' or request.user.is_superuser %}
