--- a/projects/templates/report_detail.html
+++ b/projects/templates/report_detail.html
@@ -12,43 +12,59 @@
   </div>
 
   <div class="card-body">
-    <div class="row">
-      <div class="col-md-6">
-        <h5>Podstawowe informacje</h5>
-        <dl class="row">
-          <dt class="col-sm-4">Projekt:</dt>
-          <dd class="col-sm-8">{{ report.project.name }}</dd>
+    <!-- Sekcja z podstawowymi informacjami -->
+    <div class="mb-4">
+      <dl class="row">
+        <dt class="col-sm-3">Projekt:</dt>
+        <dd class="col-sm-9">{{ report.project.name }}</dd>
 
-          <dt class="col-sm-4">Próbka:</dt>
-          <dd class="col-sm-8">{{ report.sample.name|default:"-" }}</dd>
+        <dt class="col-sm-3">Próbka:</dt>
+        <dd class="col-sm-9">{{ report.sample.name|default:"-" }}</dd>
 
-          <dt class="col-sm-4">Okres:</dt>
-          <dd class="col-sm-8">
-            {{ report.start_date|date:"Y-m-d" }} - {{ report.end_date|date:"Y-m-d" }}
-          </dd>
-        </dl>
-      </div>
+        <dt class="col-sm-3">Data rozpoczęcia / zakończenia badań:</dt>
+        <dd class="col-sm-9">
+          {{ report.start_date|date:"Y-m-d" }} / {{ report.end_date|date:"Y-m-d" }}
+        </dd>
 
-      <div class="col-md-6">
-        <h5>Normy badawcze</h5>
-        <table class="table">
-          <thead>
-            <tr>
-              <th>Norma</th>
-              <th>Wynik</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for standard in report.research_standards.all %}
-              <tr>
-                <td>{{ standard.name }}</td>
-                <td>{{ standard.reportresearchstandard.result|default:"-" }}</td>
-              </tr>
-            {% endfor %}
-          </tbody>
-        </table>
-      </div>
+        <dt class="col-sm-3">Zatwierdził:</dt>
+        <dd class="col-sm-9">
+            {% if report.approved_by %}
+                {{ report.approved_by.get_full_name|default:report.approved_by.username }}
+            {% else %}
+                -
+            {% endif %}
+        </dd>
+      </dl>
     </div>
+
+    <!-- Tabela z wynikami -->
+    <h5 class="mb-3">Wyniki badań</h5>
+    <table class="table table-hover">
+      <thead class="thead-light">
+        <tr>
+          <th style="width: 5%">Nr</th>
+          <th style="width: 25%">Metoda</th>
+          <th style="width: 25%">Norma</th>
+          <th style="width: 15%">Wynik</th>
+          <th style="width: 30%">Ocena</th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for rr_standard in report.reportresearchstandard_set.all %}
+          <tr>
+            <td>{{ forloop.counter }}</td>
+            <td>{{ rr_standard.research_standard.method }}</td>
+            <td>{{ rr_standard.research_standard.name }}</td>
+            <td>{{ rr_standard.result|default:"-" }}</td>
+            <td>{{ rr_standard.evaluation|default:"-" }}</td>
+          </tr>
+        {% empty %}
+          <tr>
+            <td colspan="5" class="text-center text-muted">Brak przypisanych wyników badań</td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
   </div>
 </div>
 {% endblock %}
