--- a/users/templates/user_profile.html
+++ b/users/templates/user_profile.html
@@ -5,8 +5,9 @@
   <div class="row justify-content-center">
     <div class="col-md-8">
       <div class="card shadow">
-        <div class="card-header">
-          <h4>Profil użytkownika</h4>
+        <div class="card-header d-flex justify-content-between align-items-center">
+            <h4 class="mb-0">Profil użytkownika</h4>
+            <a href="{% url 'profile_update' %}" class="btn btn-outline-success">Edytuj</a>
         </div>
         
         <div class="card-body">
@@ -36,7 +37,7 @@
           </dl>
           
           <div class="d-flex justify-content-between mt-4">
-            <a href="javascript:history.back()" class="btn btn-outline-secondary">Powrót</a>
+            <a href="{% url 'project_list' %}" class="btn btn-outline-secondary">Powrót</a>
             <a href="{% url 'logout' %}" class="btn btn-outline-danger">Wyloguj</a>
           </div>
         </div>
